# arg-services

./: .gitignore  .release-please-manifest.json  .releaserc.js  CHANGELOG.md  Makefile  README.md  buf.gen.yaml  buf.yaml  flake.nix  ir-services.txt  release-please-config.json  release.config.js  schemes-aifdb.json  schemes-ova.txt  schemes-walton.txt  schemes.md
.github/workflows/: release.yml
arg_services/cbr/v1beta/: adaptation.proto  casebase.proto  model.proto  retrieval.proto
arg_services/mining/v1/: adu.proto  graph_construction.proto  major_claim.proto
arg_services/mining/v1beta/: adu.proto  entailment.proto  graph_construction.proto  major_claim.proto  mining.proto
arg_services/mining_explanation/v1/: adu.proto  entailment.proto  major_claim.proto
arg_services/mining_explanation/v1beta/: adu.proto  entailment.proto  major_claim.proto
arg_services/nlp/v1/: nlp.proto
arg_services/quality/v1beta/: explanation.proto  qualia.proto
arg_services/ranking/v1beta/: ranking.proto
arg_services/retrieval/v1/: retrieval.proto
doc/: README.md
java/: build.gradle
proto/: CHANGELOG.md
proto/arg_services/adu/v1/: adu.proto
proto/arg_services/base/v1/: base.proto
proto/arg_services/cbr/v1beta/: adaptation.proto  casebase.proto  retrieval.proto
proto/arg_services/entailment/v1/: entailment.proto
proto/arg_services/graph/v1/: graph.proto
proto/arg_services/mining/v1/: adu.proto  entailment.proto  graph_construction.proto  major_claim.proto
proto/arg_services/mining/v1beta/: adu.proto  entailment.proto  mining.proto
proto/arg_services/mining_explanation/v1/: adu.proto  entailment.proto  major_claim.proto
proto/arg_services/mining_explanation/v1beta/: major_claim.proto
proto/arg_services/nlp/v1/: nlp.proto
proto/arg_services/quality/v1beta/: expert.proto
proto/arg_services/ranking/v1beta/: granularity.proto
proto/arg_services/retrieval/v1/: retrieval.proto
proto/arg_services/topic_modeling/v1/: topic_modeling.proto
proto/recap_schema/base/v1/: base.proto
proto/recap_schema/mining/v1/: mining.proto
proto/recap_schema/spacy/v1/: spacy.proto
python/: README.md  pyproject.toml
python/arg_services_helper/: __init__.py
src/java/: CHANGELOG.md  pom.xml
src/python/: CHANGELOG.md  pyproject.toml
src/python/arg_services_helper/: __init__.py
src/typescript/: CHANGELOG.md  package-lock.json  package.json
typescript/: index.ts  package-lock.json  package.json
