[tool.poetry]
name = "arg-services"
version = "0.3.7"
description = "gRPC definitions for microservice-based argumentation machines"
authors = ["Mirko Lenz <info@mirko-lenz.de>"]
license = "MIT"
readme = "README.md"
homepage = "http://recap.uni-trier.de"
repository = "https://github.com/recap-utr/arg-services"
include = ["arg_services/**/*.py", "arg_services/**/*.pyi"]

[tool.poetry.dependencies]
python = "^3.7"
grpcio = "^1.32.0"
protobuf = "^3.15.8"
grpcio-reflection = "^1.32.0"

[tool.poetry.dev-dependencies]
grpcio-tools = "^1.32.0"
mypy-protobuf = "^3.2.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
