[tool.poetry]
name = "arg-services"
version = "0.3.12"
description = "gRPC definitions for microservice-based argumentation machines"
authors = ["Mirko Lenz <info@mirko-lenz.de>"]
license = "MIT"
readme = "README.md"
homepage = "http://recap.uni-trier.de"
repository = "https://github.com/recap-utr/arg-services"
include = ["arg_services/**/*.py", "arg_services/**/*.pyi"]

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.51.1"
protobuf = "^4.21.1"
grpcio-reflection = "^1.51.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
